devops/deployment-student.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: student-service

  template:
    metadata:
      labels:
        app: student-service
    spec:
      containers:
      - name: student-service
        image: student-service:latest
        ports:
        - containerPort: 7000
          protocol: TCP
