devops/service.yml
apiVersion: v1
kind: Service
metadata:
  name: kys-service
spec:
  selector:
    app: kys-backend
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 9005
  type: NodePort
